--- a/index.html
+++ b/index.html
@@ -415,26 +415,26 @@
         <div id="projects-carousel" class="carousel slide bg-black w-75 mx-auto" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
+                    aria-current="true" aria-label="Slide 7"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
+                    aria-label="Slide 6"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+                    aria-label="Slide 5"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button>
+                    aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="5"
-                    aria-label="Slide 6"></button>
+                    aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#projects-carousel" data-bs-slide-to="6"
-                    aria-label="Slide 7"></button>
+                    aria-label="Slide 1"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
                     <img src="assets/img/bg-masthead.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#featured-project-details">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#featured-projec7-details">
                                 Personal
                                 Website and Terminal-Like Profile</a>
                         </h5>
@@ -450,7 +450,7 @@
                     <img src="assets/img/demo-image-01.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#project1-details">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#project6-details">
                                 Tadbeer Agency - A Private Recruitment Agency Licenses for
                                 Domestic Workers</a>
                         </h5>
@@ -469,7 +469,7 @@
                     <img src="assets/img/demo-image-02.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#project2-details">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#project5-details">
                                 Real Estate Database Application
                             </a>
                         </h5>
@@ -484,7 +484,7 @@
                     <img src="assets/img/demo-image-01.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#project3-details">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#project4-details">
                                 Chat Application
                             </a>
                         </h5>
@@ -499,7 +499,7 @@
                     <img src="assets/img/demo-image-02.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#project4-details">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#project3-details">
                                 Field-Programming Gate Array (FPGA) MIPS Five Stage Pipelined CPU
                             </a>
                         </h5>
@@ -516,7 +516,7 @@
                     <img src="assets/img/demo-image-01.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#project5-details">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#project2-details">
                                 Room Scheduler
                             </a>
                         </h5>
@@ -529,20 +529,17 @@
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="10000">
-                    <img src="assets/img/demo-image-02.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/RoomScheduler thumbnail.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#project6-details">
-                                Blockchain Network Simulation
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#project1-details">
+                                Room Scheduler
                             </a>
                         </h5>
                         <ul class="text-start">
-                            <li>Implemented a mock-up of a blockchain that can mine new blocks, create
-                                randomized transactions, and view how the Blockchain appends and hashes said
-                                transactions in real time</li>
-                            <li>Modified the implementation of a blockchain to include a modified
-                                Proof-of-Stake algorithm, where nodes count the number of transactions that they
-                                initiate and generate trust for themselves as a node.</li>
+                            <font color ="black"><li>Wrote a java application to facilitate room reservations</li>
+                            <li>Features: adding a new room, cancelling a reservation, adding a new date,
+                                checking status, dropping a room, interactive GUI</li></font>
                         </ul>
                     </div>
                 </div>
@@ -559,8 +556,8 @@
             </button>
         </div>
 
-        <!-- Featured Project Additional Details -->
-        <div id="featured-project-details" class="modal" tabindex="-1">
+        <!-- Featured Project 7 Additional Details -->
+        <div id="featured-project7-details" class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -580,8 +577,8 @@
             </div>
         </div>
 
-        <!-- Project One Additional Details -->
-        <div id="project1-details" class="modal" tabindex="-1">
+        <!-- Project 6 Additional Details -->
+        <div id="project6-details" class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -605,8 +602,8 @@
             </div>
         </div>
 
-        <!-- Project Two Additional Details -->
-        <div id="project2-details" class="modal" tabindex="-1">
+        <!-- Project 5 Additional Details -->
+        <div id="project5-details" class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -625,8 +622,8 @@
             </div>
         </div>
 
-        <!-- Project Three Additional Details -->
-        <div id="project3-details" class="modal" tabindex="-1">
+        <!-- Project 4 Additional Details -->
+        <div id="project4-details" class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -645,8 +642,8 @@
             </div>
         </div>
 
-        <!-- Project Four Additional Details -->
-        <div id="project4-details" class="modal" tabindex="-1">
+        <!-- Project 3 Additional Details -->
+        <div id="project3-details" class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -668,8 +665,8 @@
             </div>
         </div>
 
-        <!-- Project Five Additional Details -->
-        <div id="project5-details" class="modal" tabindex="-1">
+        <!-- Project 2 Additional Details -->
+        <div id="project2-details" class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -690,24 +687,34 @@
             </div>
         </div>
 
-        <!-- Project Six Additional Details -->
-        <div id="project6-details" class="modal" tabindex="-1">
+        <!-- Project 1 Additional Details -->
+        <div id="project1-details" class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Blockchain Network Simulation
+                        <h5 class="modal-title">Room Scheduler
                         </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <img src="assets/img/demo-image-02.jpg" class="img-thumbnail" />
+                        <img src="assets/img/Screen Recording 2023-05-11 at 11.09.26 PM.mov" class="img-thumbnail" />
                         <ul class="text-start text-black-50 mb-0">
-                            <li>Implemented a mock-up of a blockchain that can mine new blocks, create
-                                randomized transactions, and view how the Blockchain appends and hashes said
-                                transactions in real time</li>
-                            <li>Modified the implementation of a blockchain to include a modified
-                                Proof-of-Stake algorithm, where nodes count the number of transactions that they
-                                initiate and generate trust for themselves as a node.</li>
+                            The Room Scheduler project for Tiny College is a room scheduling application that allows faculty members 
+                            to reserve rooms for specific dates based on their seating requirements. The application features a user-friendly 
+                            GUI interface and utilizes a Derby database for data storage. The design follows good 
+                            Object-Oriented Design and Programming principles, with several classes such as Faculty, 
+                            Room, Date, and Reservations to handle different aspects of the application. The project 
+                            implements various user commands, including "Add Faculty" for adding faculty members to the 
+                            database, "Reserve Faculty Date Seats" for assigning rooms to faculty members based on seat 
+                            availability, "Status Reservations by Date" to display the faculty members with reserved rooms 
+                            on a specific date, "Status Waiting List" to display the faculty members on the waiting list, 
+                            "Add Room Seats" to add new rooms, "Add Date" to add new available dates, "Cancel Reservation 
+                            Faculty Date" to remove a reservation for a specific faculty member and date, "Status Faculty 
+                            member" to display the reserved rooms and waitlisted dates for a faculty member, and 
+                            "Drop Room" to remove a room from the application and reassign reservations if possible. 
+                            The project emphasizes good Object-Oriented (OO) design practices and encourages the use of 
+                            SQL statements and PreparedStatements for efficient database operations. It also provides clear 
+                            guidelines for the GUI, database management, testing scenarios, and submission process.
                         </ul>
                     </div>
                 </div>
