--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
                                 Room Scheduler
                             </a>
                         </h5>
+                        <font color ="black"><h7>Summer 2021</h7></font>
                         <ul class="text-start">
                             <font color ="black"><li>Wrote a java application to facilitate room reservations</li>
                             <li>Features: adding a new room, cancelling a reservation, adding a new date,
@@ -699,6 +700,7 @@
                     <div class="modal-body">
                         <img src="assets/img/Screen Recording 2023-05-11 at 11.09.26 PM.mov" class="img-thumbnail" />
                         <ul class="text-start text-black-50 mb-0">
+                            
                             The Room Scheduler project for Tiny College is a room scheduling application that allows faculty members 
                             to reserve rooms for specific dates based on their seating requirements. The application features a user-friendly 
                             GUI interface and utilizes a Derby database for data storage. The design follows good 
