--- a/index.html
+++ b/index.html
@@ -714,9 +714,7 @@
                             Faculty Date" to remove a reservation for a specific faculty member and date, "Status Faculty 
                             member" to display the reserved rooms and waitlisted dates for a faculty member, and 
                             "Drop Room" to remove a room from the application and reassign reservations if possible. 
-                            The project emphasizes good Object-Oriented (OO) design practices and encourages the use of 
-                            SQL statements and PreparedStatements for efficient database operations. It also provides clear 
-                            guidelines for the GUI, database management, testing scenarios, and submission process.
+                            The project emphasizes good Object-Oriented (OO) design practices and uses SQL statements and PreparedStatements for efficient database operations.
                         </ul>
                     </div>
                 </div>
