--- a/index.html
+++ b/index.html
@@ -485,25 +485,28 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
                             <a href="#" data-bs-toggle="modal" data-bs-target="#project4-details">
-                                Chat Application
+                                The Image Processing Pipeline
                             </a>
                         </h5>
                         <h7>Summer 2022</h7>
                         <ul class="text-start">
-                            <li>Implemented a chat application with client and server components and an
-                                interactive GUI </li>
+                            <li>Developed an image processing pipeline using Matlab, 
+                                involving tasks such as image manipulation, Bayer 
+                                pattern identification, white balancing, demosaicing, 
+                                brightness adjustment, gamma correction, and image 
+                                compression </li>
                         </ul>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="10000">
-                    <img src="assets/img/p3 thumbnail.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/p3 thumbnail.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="text-primary">
                             <a href="#" data-bs-toggle="modal" data-bs-target="#project3-details">
                                 Chat Application
                             </a>
                         </h5>
-                        <font color="black"><h7>Summer 2022</h7>
+                        <font color="white"><h7>Summer 2022</h7>
                         <ul class="text-start">
                             <li>Implemented a chat application with client and server components and an interactive GUI </li>
                         </ul></font>
@@ -532,9 +535,9 @@
                                 Room Scheduler
                             </a>
                         </h5>
-                        <font color ="black"><h7>Summer 2021</h7></font>
+                        <font color ="white"><h7>Summer 2021</h7></font>
                         <ul class="text-start">
-                            <font color ="black"><li>Wrote a java application to facilitate room reservations</li>
+                            <font color ="white"><li>Wrote a java application to facilitate room reservations</li>
                             <li>Features: adding a new room, cancelling a reservation, adding a new date,
                                 checking status, dropping a room, interactive GUI</li></font>
                         </ul>
@@ -624,7 +627,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Chat Application</h5>
+                        <h5 class="modal-title">The Image Processing Pipeline</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
